--- a/exercises/05-Sidebar-With-Menu/index.html
+++ b/exercises/05-Sidebar-With-Menu/index.html
@@ -3,11 +3,37 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
 		<title>05 Sidebar With Menu</title>
 	</head>
+
 	<body>
 		<!-- your code here, rememeber to wrap everything into a container-fluid -->
-		
+		<div class="container-fluid p-3">
+			<div class="row">
+				<div class="col-2 p-3">
+					<ul class="nav flex-column">
+						<nav>
+							<a class="nav-link" href="#">Home</a>
+							<a class="nav-link" href="#">Profile</a>
+							<a class="nav-link" href="#">Messages</a>
+						</nav>
+					</ul>
+				</div>
+				<div class="col-10 bg-secondary p-3">
+					<h4>Hello!</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt cum optio cumque est quidem dolore nam hic vel, aut odio
+						architecto. Quisquam magni, inventore perspiciatis nihil aliquid dolore tempora nulla!
+					</p>
+					<button class="btn btn-primary" type="submit">Click me!</button>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
