--- a/exercises/06-Jumbotron-And-Three-Boxes/index.html
+++ b/exercises/06-Jumbotron-And-Three-Boxes/index.html
@@ -11,5 +11,46 @@
 		/>
 		<title>06 Jumbotron And 3 Boxes</title>
 	</head>
-	<body></body>
+
+	<body>
+		<div class="container-fluid">
+			<div class="row m-3 p-5 bg-light">
+				<h1>Hello, world!</h1>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium provident quos totam reiciendis. Delectus quo suscipit
+					nostrum accusamus necessitatibus consequatur, officiis eveniet totam saepe veniam, repellendus cumque dolor quod asperiores.
+				</p>
+				<button type="button" class="btn btn-primary col-2">Learn more +</button>
+			</div>
+
+			<div class="d-flex p-3 m-3">
+				<div class="m-3 p-3">
+					<h2>Heading</h2>
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium provident quos totam reiciendis. Delectus quo suscipit
+						nostrum accusamus necessitatibus consequatur, officiis eveniet totam saepe veniam, repellendus cumque dolor quod asperiores.
+					</p>
+					<button type="button" class="btn btn-light">View details >></button>
+				</div>
+				<div class="m-3 p-3">
+					<h2>Heading</h2>
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium provident quos totam reiciendis. Delectus quo suscipit
+						nostrum accusamus necessitatibus consequatur, officiis eveniet totam saepe veniam, repellendus cumque dolor quod asperiores.
+					</p>
+					<button type="button" class="btn btn-light">View details >></button>
+				</div>
+				<div class="m-3 p-3">
+					<h2>Heading</h2>
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium provident quos totam reiciendis. Delectus quo suscipit
+						nostrum accusamus necessitatibus consequatur, officiis eveniet totam saepe veniam, repellendus cumque dolor quod asperiores.
+					</p>
+					<button type="button" class="btn btn-light">
+						<small>View details>></small>
+					</button>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
