--- a/exercises/07-Buttons-Alert-And-Table/index.html
+++ b/exercises/07-Buttons-Alert-And-Table/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <title>07 Buttons, Alert and Table</title>
-    </head>
-    <body>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+		<title>07 Buttons, Alert and Table</title>
+	</head>
 
-    </body>
+	<body>
+		<div class="container-fluid row-cols-2">
+			<div class="col-6 m-3 p-3">
+				<h5>Is hard to remember all the bootstrap elements.</h5>
+				<p>The rest seems easy because it was very well thought! Don't you agree?</p>
+				<button type="button" class="btn btn-success">Yes</button>
+				<button type="button" class="btn btn-danger">No</button>
+			</div>
+
+			<div class="row col-6 m-3 p-3">
+				<div class="alert alert-warning d-flex align-items-center" role="alert">
+					<svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
+						<use xlink:href="#exclamation-triangle-fill" />
+					</svg>
+					<div>If you don't agree some of this people may slap you in the face:</div>
+				</div>
+				<div class="table">
+					<table class="table table-light table-striped">
+						<thead>
+							<tr>
+								<th scope="col">First name</th>
+								<th scope="col">Last name</th>
+								<th scope="col">Email</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>John</td>
+								<td>Doe</td>
+								<td>john@example.com</td>
+							</tr>
+							<tr>
+								<td>Mary</td>
+								<td>Moe</td>
+								<td>mary@example.com</td>
+							</tr>
+							<tr>
+								<td>July</td>
+								<td>Dooley</td>
+								<td>july@example.com</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
